# smash

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATIONS.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dependencies.py  environment-dev.yml  environment.yml  finalize_f90wrap.sh  generate_version.py  hdf5_io_tests.py  io-multi-model_tests.py  kind_map  makefile  makefile.dep  meson.build  meson.options  py_mod_names  pyproject.toml  requirements-dev.txt  requirements.txt  sed_f90wrap.sh  setup.cfg  setup.py  smash.bib  venv-dev.sh  venv_install.sh  versioneer.py
smash/: __init__.py  _constant.py  _typing.py  _version.py  meson.build
smash/core/: __init__.py  _build_derived_type.py  _build_model.py  _build_model_dev.py  _constant.py  _constant_dev.py  _deterministic_optimize.py  _event_segmentation.py  _optimize.py  _read_input_data.py  _read_input_data_dev.py  _signatures.py  _standardize.py  _utils.py  common.py  generate_samples.py  model.py  model_dev.py  net.py  prcp_indices.py  raster.py  signatures.py  utils.py
smash/core/internal_fluxes/: internal_fluxes_manipulation.py
smash/core/model/: _build_model.py  _read_input_data.py  _standardize.py  model.py
smash/core/optimize/: Bayes_optimize.py  _ann_optimize.py  _optimize.py  _standardize.py  bayes_optimize.py
smash/core/signal_analysis/: __init__.py
smash/core/simulation/: __init__.py  _ann_optimize.py  _doc.py  _optimize.py  _standardize.py  bayes_optimize.py  control.py  multiple_run.py  options.py
smash/core/stats/: stats_manipulation.py
smash/dataset/: load.py  run_dataset.py
smash/dataset/Cance/: mesh_Cance.hdf5  mesh_Cance.py  setup_Cance.yaml
smash/dataset/France/: mesh_France.hdf5  mesh_France.py  setup_France.yaml
smash/dataset/Lez/: mesh_Lez.hdf5  mesh_Lez.py  setup_Lez.yaml
smash/f90/: main.f90
smash/f90/wrapped_module/: m_mesh.f90  m_setup.f90
smash/f90/wrapping/: f90wrap_m_mesh.f90  f90wrap_m_setup.f90
smash/factory/: __init__.py
smash/factory/dataset/: France_flwdir.tif  France_flwdir.tif.aux.xml  dataset.py
smash/factory/mesh/: _get_mesh.py  _prepro.py  _standardize.py  _tools.py  mesh.py  meson.build  mw_mesh.f90
smash/factory/net/: _layers.py  _loss.py  _optimizers.py  _standardize.py  net.py
smash/factory/samples/: _standardize.py  samples.py
smash/fcore/: _f90wrap_decorator.py  meson.build
smash/fcore/common/: m_array_creation.f90  m_array_manipulation.f90  m_screen_display.f90  md_algebra.f90  md_constant.f90  md_stats.f90
smash/fcore/cost/: md_regularization.f90
smash/fcore/derived_type/: md_checkpoint_variable.f90  mwd_atmos_data.f90  mwd_common_options.f90  mwd_control.f90  mwd_cost_options.f90  mwd_cross_section.f90  mwd_hy1d_parameters.f90  mwd_hydraulic_structure.f90  mwd_input_data.f90  mwd_mesh.f90  mwd_mesh_hy.f90  mwd_nn_parameters.f90  mwd_opr_parameters.f90  mwd_opr_states.f90  mwd_optimize_options.f90  mwd_options.f90  mwd_output.f90  mwd_parameters.f90  mwd_physio_data.f90  mwd_response.f90  mwd_response_data.f90  mwd_returns.f90  mwd_rr_parameters.f90  mwd_rr_states.f90  mwd_segment.f90  mwd_serr_mu_parameters.f90  mwd_serr_sigma_parameters.f90  mwd_setup.f90  mwd_sparse_matrix.f90  mwd_stats.f90  mwd_u_response_data.f90
smash/fcore/evaluation/: mwd_efficiency_metric.f90
smash/fcore/forward/: forward.f90  forward_db.f90  forward_openmp_db.f90  md_forward_structure.f90  md_simulation.f90  mw_forward.f90
smash/fcore/operator/: md_gr_operator.f90  md_hy1d_operator.f90  md_neural_network.f90  md_neural_ode_operator.f90  md_nn_ode_operator.f90  md_node_operator.f90  md_routing_operator.f90  md_snow_operator.f90  md_vic3l_operator.f90
smash/fcore/optimize/: md_regularization.f90  mw_control_dealloc.f90  mw_optimize.f90  mwd_cost.f90
smash/fcore/routine/: md_stats.f90  mw_atmos_statistic.f90  mw_hydr_struct_manipulation.f90  mw_interception_capacity.f90  mw_mask.f90  mwd_atmos_manipulation.f90  mwd_parameters_manipulation.f90  mwd_sparse_matrix_manipulation.f90
smash/fcore/signal_analysis/: mw_prcp_indices.f90  mwd_metrics.f90  mwd_signatures.f90
smash/fcore/tapenade/: adOMP.c
smash/io/: __init__.py  _configuration.py  _error.py  _raster.py  _yaml.py  export_parameters.py  hdf5.py  hdf5_io.py  import_parameters.py  mesh.py  mesh_io.py  model.py  model_ddt.py  model_ddt_io.py  model_io.py  multi_model_io.py  parameters.py  raster.py  save_control_vector.py  setup.py  setup_io.py  yaml.py
smash/io/handler/: _hdf5_handler.py
smash/io/mesh/: _parse.py  mesh.py
smash/io/meshio/: meshio.py
smash/io/model/: _parse.py  model.py
smash/io/setup/: setup.py
smash/mesh/: __init__.py  _meshing.f90  mesh.py  meshing.f90  meshing.py  mw_mesh.f90  mw_meshing.f90
smash/meshing/: __init__.py  _meshing.f90  meshing.py
smash/signal_analysis/: __init__.py
smash/signal_analysis/_standardize/: _standardize.py
smash/signal_analysis/metrics/: _standardize.py  metrics.py
smash/signal_analysis/scores/: scores.py
smash/signal_analysis/segmentation/: _tools.py  segmentation.py
smash/signal_analysis/signatures/: _sign_computation.py  signatures.py
smash/simulation/: __init__.py  _standardize.py
smash/simulation/optimize/: _standardize.py  optimize.py
smash/simulation/run/: _standardize.py  run.py
smash/solver/: __init__.py  _f90wrap_decorator.py  _mw_adjoint_test.py  _mw_optimize.py  _mw_routine.py  _mw_run.py  _mwd_common.py  _mwd_cost.py  _mwd_input_data.py  _mwd_mesh.py  _mwd_output.py  _mwd_parameters.py  _mwd_setup.py  _mwd_states.py
smash/solver/common/: md_constant.f90  md_constant_dev.f90
smash/solver/derived_type/: mwd_atmos_data.f90  mwd_atmos_data_dev.f90  mwd_common_options.f90  mwd_control.f90  mwd_control_dev.f90  (+22 more)
smash/tests/: baseline.hdf5  baseline.py  diff_baseline.csv  gen_baseline.py  gen_simulated_discharges.py  generate_baseline.py  simulated_discharges.hdf5  test_constant.py  test_define_global_vars.py
smash/tools/: _common_function.py  hdf5_handler.py  object_handler.py  raster_handler.py
smash/util/: _doctools.py  _typing.py
smash/wrapping/: __init__.py  m_mesh.py  m_setup.py
(+2248 files in other folders)
